--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#" id="menu-quem-somos" class="menu-link">QUEM SOMOS</a></li>
-                <li><a href="https://favucozinha.github.io/Favu/" target="_blank" id="menu-inicial-link" class="menu-link">MENU INICIAL</a></li>
+                <li><a href="https://favucozinha.github.io/Favunovo/" target="_blank" id="menu-inicial-link" class="menu-link">MENU INICIAL</a></li>
             </ul>
             <div class="menu-socials">
                 <a href="https://www.instagram.com/favucozinha/" target="_blank" class="menu-social-link">
